--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,1 +1,148 @@
-@import "commonStyles";
+$main-color: #73c7b8;
+@import 'commonStyles';
+@import 'toDoList';
+@import 'elements';
+@import 'colors';
+
+.button {
+    box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    padding: 12px 0;
+    margin: 15px;
+    width: 100%;
+    max-width: 145px;
+    letter-spacing: 0.14px;
+    background-color: $main-color;
+    outline: none;
+    color: #fff;
+}
+
+.button:hover {
+    cursor: pointer;
+    color: #fff;
+}
+
+body {
+    background-color: #d6d0d0;
+    background-image: url(../img/bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position-x: 100%;
+    color: $main-color;
+    font-size: 1.6rem;
+}
+
+.header {
+    font-size: 1.8rem;
+    justify-content: space-between;
+    max-width: 1000px;
+    margin: auto;
+    padding: 10px 15px;
+    align-items: center;
+    min-width: 400px;
+    color: $main-color;
+
+    .logo {
+        width: 10%;
+        height: 0;
+        padding-bottom: 10%;
+        border-radius: 100%;
+        background-image: url('../img/logo.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        cursor: pointer;
+    }
+
+    nav {
+        label {
+            display: none;
+            text-transform: uppercase;
+        }
+
+        .burger-line {
+            display: none;
+            background-color: $main-color;
+        }
+    }
+    .menu {
+        margin: 0;
+        padding: 0;
+
+        span {
+            padding: 5px 10px;
+            cursor: pointer;
+            display: flex;
+            flex-direction: column;
+            border-radius: 5px;
+
+            .sub-item {
+                margin: 0;
+                padding: 0;
+                width: 100%;
+                position: absolute;
+                left: 0;
+                top: 100%;
+                display: none;
+                text-align: center;
+                transition: 0.6s;
+                background: #ffffff2e;
+            }
+        }
+
+        span:hover .sub-item {
+            display: block;
+
+        }
+
+        span:hover {
+            background-color: rgba(10, 32, 33, 0.42);
+        }
+
+        a:hover {
+            color: #fff;
+        }
+
+        a.current-page {
+            color: #fff;
+            text-decoration: white underline;
+            text-shadow: 2px 1px 2px $main-color;
+        }
+    }
+
+    .menu > span {
+        position: relative;
+    }
+}
+
+.main {
+    margin: 10% auto;
+    color: #fff;
+    max-width: 1200px;
+    min-width: 420px;
+    text-align: center;
+    font-size: 2rem;
+    padding: 20px;
+    width: 90%;
+    background-color: rgba(0, 0, 0, 0.5);
+
+    h3 {
+        color: $main-color;
+    }
+
+    p {
+        text-align: justify;
+        margin: 15px 10%;
+        font-size: 1.6rem;
+    }
+
+    ul {
+        width: 50%;
+        margin: auto;
+        text-align: left;
+        font-size: 1.6rem;
+    }
+}
+
+@import 'media';
