--- a/src/scss/_toDoList.scss
+++ b/src/scss/_toDoList.scss
@@ -39,6 +39,10 @@ section[id='toDo'] {
         width: 20%;
         text-transform: uppercase;
     }
+    .warning {
+        background-color: red;
+        font-size: 1rem;
+    }
 }
 
 .task-list {
