last commit) (i hope)

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -127,6 +127,7 @@ body {
     padding: 20px;
     width: 90%;
     background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
 
     h3 {
         color: $main-color;
